--- a/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
+++ b/src/app/shared/components/dialog-address-section/dialog-address-section.component.html
@@ -13,7 +13,8 @@
 			</div>
 			<div class="d-flex">
 
-				<rounded-red-button label="Utama"
+				<rounded-red-button *ngIf="i == 0"
+					label="Utama"
 					paddingtop="5px"
 					paddingbottom="5px"
 					paddingleft="15px"
