Revisi Bug: [Approval] Pop Up Rejected Is Not Similar Like Mock Up

--- a/src/app/modules/approval2/components/approval-reject-dialog/approval-reject-dialog.component.html
+++ b/src/app/modules/approval2/components/approval-reject-dialog/approval-reject-dialog.component.html
@@ -25,6 +25,7 @@
 				paddingleft="0px"
 				paddingright="0px"
 				(click)="actionTolak()"
+				width="184px"
 				float="right"></red-button>
 
 		</div>
