update [Dashboard] Data Chart Still Using Hardcode

--- a/src/app/modules/account/pages/account-dashboard/account-dashboard.component.html
+++ b/src/app/modules/account/pages/account-dashboard/account-dashboard.component.html
@@ -13,11 +13,8 @@
         <filter-dropdown-list class="flex-even"></filter-dropdown-list> -->
     </div>
 </div>
-{{items_purchaser}}
-{{items_month}}
-{{items_product}}
 
-<!-- <output-graph #inputgetData
+<output-graph #inputGraph
     [items_month]="items_month"
     [items_purchaser]="items_purchaser"
-    [items_product]="items_product"></output-graph> -->
+    [items_product]="items_product"></output-graph>
