--- a/src/app/shared/components/footer-customer-support/footer-customer-support.component.scss
+++ b/src/app/shared/components/footer-customer-support/footer-customer-support.component.scss
@@ -6,18 +6,17 @@
 	margin-right: 20px;
 }
 
-.putih{
+.putih {
 	background-color: $putih-tok;
 	height: 100%;
 	margin-left: -6%;
 }
 
 .footer-feature-label {
-	color: $abu-abu-aspal;
-	margin-left: 35%;
-    margin-top: -18%;
+	color: #606060;
+	margin-left: 33%;
+	margin-top: -18%;
 	font-weight: bold;
 	font-size: 18px;
 	line-height: 25px;
-
 }
