--- a/src/app/modules/approval2/components/item-card/item-card.component.scss
+++ b/src/app/modules/approval2/components/item-card/item-card.component.scss
@@ -56,6 +56,7 @@
 	height: 92px;
 
 	object-fit: scale-down;
+	cursor: pointer;
 }
 
 #main-wrapper {
@@ -155,7 +156,6 @@
 	width: 100%;
 }
 
-
-.tolak{
+.tolak {
 	cursor: pointer;
 }
