--- a/src/app/modules/cart2/components/item-card/item-card.component.html
+++ b/src/app/modules/cart2/components/item-card/item-card.component.html
@@ -20,7 +20,8 @@
 		<div class="rectangle-86 w-100 d-flex">
 			<img src='{{item.product_image}}'
 				(error)="onImgError($event)"
-				class="item-img">
+				class="item-img"
+				(click)="itemClicked()">
 			<wsh wide="15px"></wsh>
 			<div id="item-desc-wrapper"
 				class="flex-grow-1">
