--- a/src/app/modules/request-approval/components/item-card2/item-card2.component.html
+++ b/src/app/modules/request-approval/components/item-card2/item-card2.component.html
@@ -22,7 +22,8 @@
             <wsh wide="13px"></wsh>
             <img src='{{item.product_image}}'
                 (error)="onImgError($event)"
-                class="item-img">
+                class="item-img"
+                (click)=itemClicked()>
             <wsh wide="15px"></wsh>
             <div id="item-desc-wrapper">
                 <item-desc [item]="item"></item-desc>
