--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.scss
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.scss
@@ -32,6 +32,7 @@
 #image-item-trx {
 	width: 121px;
 	object-fit: scale-down;
+	cursor: pointer;
 }
 
 .title-1 {
@@ -91,18 +92,6 @@
 .coret {
 	text-decoration-line: line-through;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 #float-foot {
 	background: $color-primary;
