--- a/src/app/modules/home/components/catalog-section/catalog-section.component.html
+++ b/src/app/modules/home/components/catalog-section/catalog-section.component.html
@@ -4,16 +4,11 @@
 		<div id="catalog-section-lihat-semua"
 			(click)="lihatSemua(products[0].category_id,products[0].subcategory_id)">Lihat Semua</div>
 	</div>
-	<div class="white-space"></div>
-	<div class="d-flex pas-catalog">
-		<!-- {{products|json}} -->
+	<wsv wide="15px"></wsv>
+	<div class="d-flex w-100 justify-content-between">
 		<div *ngFor="let product of products;  let i=index">
-			<div *ngIf="i<6">
-				<div class="d-flex">
-					<div class="white-space-18px-horizontal"></div>
-					<catalog-card [item]="product"></catalog-card>
-				</div>
-			</div>
+			<catalog-card class="d-flex "
+				[item]="product"></catalog-card>
 		</div>
 	</div>
 </div>
