--- a/src/app/shared/components/footer-bar/footer-bar.component.html
+++ b/src/app/shared/components/footer-bar/footer-bar.component.html
@@ -2,28 +2,38 @@
 	<app-email-button id="email-button"></app-email-button>
 </div>
 
-<div id="footer-bar-container"
-	class="d-flex justify-content-around align-items-center">
-	<div id="merah">
-		<img src="../../../../assets/image/logo/logofooter.svg"
-			id="footer-logo">
+<div id="footer-bar-container">
+	<div id="merah"
+		[style.width.px]="redWidth">
 	</div>
+	<div class="footer-wrapper">
+		<div class="container d-flex justify-content-between align-items-center w-100 h-100"
+			id="footer-inner-wrapper">
 
-	<div class="d-flex justify-content-around align-items-center putih panjang">
+			<img src="../../../../assets/image/logo/nest-logo.svg"
+				id="footer-logo">
 
-		<footer-feature image="../../../../assets/image/logo/ft1.png"
-			titleOne="Jaminan"
-			titleTwo="Pengiriman"></footer-feature>
-		<div class="white-space-60px"></div>
-		<footer-feature image="../../../../assets/image/logo/ft2.png"
-			titleOne="Kemudahan"
-			titleTwo="Pembayaran"></footer-feature>
-		<div class="white-space-60px"></div>
-		<footer-feature image="../../../../assets/image/logo/ft3.png"
-			titleOne="Respon"
-			titleTwo="Cepat"></footer-feature>
-	</div>
-	<div class="d-flex justify-content-around align-items-center putih">
-		<footer-customer-support titleTwo="0812 8330 0388"></footer-customer-support>
+
+
+			<div id="middle"
+				class="d-flex justify-content-center align-items-center w-100">
+
+				<footer-feature image="../../../../assets/image/logo/ft1.png"
+					titleOne="Jaminan"
+					titleTwo="Pengiriman"></footer-feature>
+				<wsh wide="70px"></wsh>
+				<footer-feature image="../../../../assets/image/logo/ft2.png"
+					titleOne="Kemudahan"
+					titleTwo="Pembayaran"></footer-feature>
+				<wsh wide="70px"></wsh>
+				<footer-feature image="../../../../assets/image/logo/ft3.png"
+					titleOne="Respon"
+					titleTwo="Cepat"></footer-feature>
+			</div>
+
+			<footer-customer-support id="cs-logo"
+				titleTwo="0812 8330 0388"></footer-customer-support>
+
+		</div>
 	</div>
 </div>
