--- a/src/app/shared/components/footer-bar/footer-bar.component.scss
+++ b/src/app/shared/components/footer-bar/footer-bar.component.scss
@@ -1,72 +1,33 @@
 @import '../../../../styles/variables/colors';
 
 #footer-bar-container {
-	height: 200px;
-	box-shadow: 0px -1px 7px -2px rgba(0,0,0,0.4);
-	margin-top:2px;
+	height: 118px;
+	box-shadow: 0px -1px 7px -2px rgba(0, 0, 0, 0.4);
 	background-color: $putih-tok;
-}
-
-.logos{
-	float:left;
 	position: relative;
-	width: 20%;
-	height: 200px;
-	margin: 0px;
-	padding: 0px;
-	border: solid blue 1px;
-	
+	z-index: -1;
 }
 
-#merah{
+#merah {
 	background-color: $color-primary;
 	height: 100%;
-	margin-left:-100px;
-	width:25%;
 }
 
-.putih{
-	background-color: $putih-tok;
-	height: 100%;
+.footer-wrapper {
+	position: absolute;
+	top: 0;
+	height: 118px;
+	width: 100%;
 }
 
-.panjang{
-	width:40%;
-}
-
-.feat{
-	width:70%;
-	float:left;
-	position: relative;
-	height: 200px;
-	background-color: $putih-tok;
-	border: solid blue 1px;
-}
-
-#kotakemail{
+#kotakemail {
 	border: solid yellowgreen 0px;
 	width: 99px;
 	height: 99px;
 	position: fixed;
 	float: right;
-	top:80%;
+	top: 80%;
 	right: 0%;
 	border-radius: 50%;
-	border:solid blue 0px;
-}
-
-#kotakemail-hide{
-	display: none;
-}
-
-#footer-logo {
-	width: 185.83px;
-	height: 86px;
-	margin-top: 50px;
-	margin-left:30%;
-	background-color: $color-primary;
-}
-
-.white-space-60px {
-	width: 60px;
+	border: solid blue 0px;
 }
