--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -2,7 +2,7 @@
 
 .footer-container {
 	height: 42px;
-	background-color: $abu-abu-charcoal;
+	background-color: #606060;
 	font-weight: normal;
 	font-size: 16px;
 	color: $putih-tok;
