--- a/src/app/shared/components/qty-ctrl-two/qty-ctrl-two.component.html
+++ b/src/app/shared/components/qty-ctrl-two/qty-ctrl-two.component.html
@@ -2,7 +2,22 @@
 	<a id="remove_cart_logo_wrapper"
 		class="d-flex align-items-center"
 		(click)="removeOneFromCart()">
-		<object id="remove_cart_logo"
+		<object *ngIf="qty == 1"
+			id="remove_cart_logo"
+			type="image/svg+xml"
+			data="../../../../../assets/image/icons/remove-logo-gray.svg"
+			class="pointereventnone">
+			<style>
+				svg {
+					cursor: pointer;
+					pointer-events: none;
+				}
+
+			</style>
+		</object>
+
+		<object *ngIf="qty != 1"
+			id="remove_cart_logo"
 			type="image/svg+xml"
 			data="../../../../../assets/image/icons/remove-logo.svg"
 			class="pointereventnone">
