Revisi Bugs: Padding Top (Top-Fixed pada halaman Pilih Produk)

--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -1,7 +1,6 @@
 <div class="container">
 	<div class="d-flex">
-		<div id="pilih-produk-container-1"
-			style="padding-bottom: 20px;">
+		<div id="pilih-produk-container-1">
 			<filter-card></filter-card>
 		</div>
 		<div id="pilih-produk-container-2"
@@ -32,7 +31,7 @@
 				<div class="container d-flex">
 					<div id="left-container"
 						[style.height.px]="leftContainerHeight"
-						class="flex-grow-1">
+						class="flex-grow-1 productbox">
 
 						<div style="margin-top:20px;padding-top:60px;"
 							infiniteScroll
