--- a/src/app/layout/components/header-category-button/header-category-button.component.html
+++ b/src/app/layout/components/header-category-button/header-category-button.component.html
@@ -1,6 +1,6 @@
 <div ngbDropdown
 	#myDrop="ngbDropdown"
-	class="d-inline-block"
+	class="d-inline-block container"
 	(mouseenter)="resetSelectedCategory()"
 	(mouseover)="myDrop.open();"
 	(mouseout)="myDrop.close();">
