--- a/src/app/shared/components/footer-bar/footer-bar.component.html
+++ b/src/app/shared/components/footer-bar/footer-bar.component.html
@@ -3,37 +3,34 @@
 </div>
 
 <div id="footer-bar-container">
-	<div id="merah"
-		[style.width.px]="redWidth">
-	</div>
-	<div class="footer-wrapper">
-		<div class="container d-flex justify-content-between align-items-center w-100 h-100"
-			id="footer-inner-wrapper">
 
-			<img src="../../../../assets/image/logo/nest-logo.svg"
-				id="footer-logo">
+	<div class="container d-flex justify-content-between align-items-center w-100 h-100"
+		id="footer-inner-wrapper">
+
+		<img src="../../../../assets/image/logo/logo-with-name.png"
+			id="footer-logo">
 
 
 
-			<div id="middle"
-				class="d-flex justify-content-center align-items-center w-100">
 
-				<footer-feature image="../../../../assets/image/logo/ft1.png"
-					titleOne="Jaminan"
-					titleTwo="Pengiriman"></footer-feature>
-				<wsh wide="70px"></wsh>
-				<footer-feature image="../../../../assets/image/logo/ft2.png"
-					titleOne="Kemudahan"
-					titleTwo="Pembayaran"></footer-feature>
-				<wsh wide="70px"></wsh>
-				<footer-feature image="../../../../assets/image/logo/ft3.png"
-					titleOne="Respon"
-					titleTwo="Cepat"></footer-feature>
-			</div>
+		<div id="middle"
+			class="d-flex justify-content-center align-items-center w-100">
 
-			<footer-customer-support id="cs-logo"
-				titleTwo="0812 8330 0388"></footer-customer-support>
-
+			<footer-feature image="../../../../assets/image/logo/ft1.png"
+				titleOne="Jaminan"
+				titleTwo="Pengiriman"></footer-feature>
+			<wsh wide="70px"></wsh>
+			<footer-feature image="../../../../assets/image/logo/ft2.png"
+				titleOne="Kemudahan"
+				titleTwo="Pembayaran"></footer-feature>
+			<wsh wide="70px"></wsh>
+			<footer-feature image="../../../../assets/image/logo/ft3.png"
+				titleOne="Respon"
+				titleTwo="Cepat"></footer-feature>
 		</div>
+
+		<footer-customer-support id="cs-logo"
+			titleTwo="0812 8330 0388"></footer-customer-support>
+
 	</div>
 </div>
