--- a/src/app/shared/components/footer-bar/footer-bar.component.scss
+++ b/src/app/shared/components/footer-bar/footer-bar.component.scss
@@ -4,22 +4,13 @@
 	height: 118px;
 	box-shadow: 0px -1px 7px -2px rgba(0, 0, 0, 0.4);
 	background-color: $putih-tok;
-	position: relative;
 	z-index: -1;
 }
 
-#merah {
-	background-color: $color-primary;
-	height: 100%;
+#footer-logo {
+	width: 200px;
+	object-fit: scale-down;
 }
-
-.footer-wrapper {
-	position: absolute;
-	top: 0;
-	height: 118px;
-	width: 100%;
-}
-
 #kotakemail {
 	border: solid yellowgreen 0px;
 	width: 99px;
