--- a/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.scss
+++ b/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.scss
@@ -2,33 +2,28 @@
 @import '../../../../../styles/variables/fonts';
 
 #top-fixed {
-	position: fixed;
-	width: 1366px;
 	background-color: $abu-abu-2;
-	z-index: 1;
-	border: solid blue 0px;
 }
 
-.filternya {
-	position: relative;
-	float: left;
-	width: 95%;
+.status-button {
+	margin-right: 40px;
 }
 
-@media (min-width: 1368px) {
-	.pas {
-		max-width: 100%;
-	}
+#item-list {
+	overflow: scroll;
+	height: 100px;
 }
 
-@media (max-width: 1366px) {
-	.pas {
-		max-width: 80%;
-	}
+.search-results {
+	overflow: scroll;
+	height: 100px;
 }
-
-#divload{
-	position:absolute;top:92%;left:50%;height:60px;width:60px;
+#divload {
+	position: absolute;
+	top: 92%;
+	left: 50%;
+	height: 60px;
+	width: 60px;
 }
 
 #keranjang-label {
@@ -190,7 +185,5 @@
 	height: 1px;
 	width: 100%;
 	background-color: #a9a9a9;
-	position: relative;
-	float:left;
 	opacity: 0.6;
 }
