email blocking cs number

--- a/src/app/shared/components/footer-bar/footer-bar.component.scss
+++ b/src/app/shared/components/footer-bar/footer-bar.component.scss
@@ -17,7 +17,7 @@
 	height: 99px;
 	position: fixed;
 	float: right;
-	top: 80%;
+	bottom: 100px;
 	right: 0%;
 	border-radius: 50%;
 	border: solid blue 0px;
