--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
@@ -91,7 +91,7 @@
                         paddingleft="0px"
                         paddingright="0px"
                         float="right"
-                        (click)="ajukanlagi()"></red-button>
+                        (click)="belilagi(dangerTpl,item)"></red-button>
                 </ng-template>
 
                 <ng-template #fourth>
