--- a/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
+++ b/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
@@ -21,7 +21,7 @@
       #minimum>
     <div class="filter-card-underline"></div>
     <input id="maximum-input"
-      type="maximum"
+      type="number"
       class="textbox-search"
       placeholder="Maximum"
       (change)="qtyChange('maximum')"
