--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
@@ -1,6 +1,6 @@
 <block-ui>
     <div class="container d-flex">
-        <div *ngIf="listSummaryByAddress.length != 0 else elseBlock"
+        <div *ngIf="listSummaryByAddress.length === 0 else elseBlock"
             class="w-100">
             <div id="keranjang-label">APPROVAL</div>
             <div>
