--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -87,7 +87,8 @@
 			(click)="goToAccount()"
 			(contextmenu)="onRightClick($event, {content: 'Profile', redir: 'account'})">
 			<img id="headers-user-photo"
-				src="{{datauser?.profile_picture_url}}">
+				src="{{datauser?.profile_picture_url}}"
+				(error)="onImgError($event)">
 		</div>
 
 		<!-- an hidden div is created to set the position of appearance of the menu-->
