--- a/src/app/modules/detail-product/pages/detail-product-layout/detail-product-layout.component.scss
+++ b/src/app/modules/detail-product/pages/detail-product-layout/detail-product-layout.component.scss
@@ -1,3 +1,99 @@
-#divload{
-    position:absolute;top:300px;left:25%;min-height:100px;min-width:100px;z-index: 1000;opacity:0.8;
+@import '../../../../../styles/variables/colors';
+#divload {
+	position: absolute;
+	top: 300px;
+	left: 25%;
+	min-height: 100px;
+	min-width: 100px;
+	z-index: 1000;
+	opacity: 0.8;
+}
+
+.card-img-top {
+	width: 349px;
+	height: 349px;
+	object-fit: scale-down;
+	border: 0.5px solid #a9a9a9;
+	box-sizing: border-box;
+	border-radius: 8px;
+	padding: 1px 1px 1px 1px;
+	cursor: pointer;
+}
+
+#product-detail-label {
+	color: #606060;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 25px;
+}
+
+.rounded-container {
+	background: #ffffff;
+	box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+	border-radius: 20px;
+	padding: 30px;
+}
+
+#notif-inner-container {
+	margin-top: 13px;
+	padding-left: 4px;
+	padding-top: 7px;
+	padding-bottom: 10px;
+	padding-right: 12px;
+	width: 350px;
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+	border-radius: 8px;
+	background-color: #ffffff;
+}
+
+#notif-img {
+	width: 56px;
+	height: 56px;
+	overflow: hidden;
+}
+
+#wrapper-notification {
+	min-height: 100px;
+	pointer-events: none;
+}
+
+#wrapper-inner-notification {
+	width: 400px;
+	max-height: 345px;
+	background: #fdfdfd;
+	box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+	border-radius: 0px 0px 8px 8px;
+	padding-left: 12px;
+	padding-right: 12px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+#rounded-inner-notif {
+	background: #ffffff;
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+	border-radius: 8px;
+	padding-left: 4px;
+	padding-right: 12px;
+	padding-top: 10px;
+	padding-bottom: 5px;
+}
+
+#keranjang-label {
+	font-weight: bolder;
+	font-size: 16px;
+}
+
+#lihat-keranjang-label {
+	font-weight: bold;
+	font-size: 12px;
+	width: 130px;
+	height: 32px;
+	background: $color-primary;
+	color: $putih-tok;
+	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+	border-radius: 8px;
+	cursor: pointer;
+	pointer-events: all;
 }
