--- a/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
+++ b/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
@@ -1,54 +1,32 @@
 <div id="filter-card-container">
   <div id="filter-label">Filter</div>
-  <!-- <div id="filter-label-2">Lokasi</div>
-	<div class="d-flex justify-content-center align-items-center">
-		<input type="text"
-			class="textbox-search-with-logo"
-			placeholder="Cari Lokasi">
-	</div>
-	<div class="filter-card-underline"></div>-->
+
   <div id="filter-label-2">Harga</div>
-  <form>
-    <input id="minimum-input"
-      type="number"
-      class="textbox-search"
-      placeholder="Minimum"
-      (change)="qtyChange('minimum')"
-      (keyup.enter)="carilagi(minimum.value,maximum.value)"
-      autocomplete="off"
-      formControlName="minimum"
-      min="0"
-      #minimum>
-    <div class="filter-card-underline"></div>
-    <input id="maximum-input"
-      type="number"
-      class="textbox-search"
-      placeholder="Maximum"
-      (change)="qtyChange('maximum')"
-      (keyup.enter)="carilagi(minimum.value,maximum.value)"
-      autocomplete="off"
-      formControlName="maximum"
-      #maximum>
 
-    <div class="filter-card-underline"></div>
+  <input id="minimum-input"
+    [(ngModel)]="minvalue"
+    class="textbox-search"
+    autonumeric
+    [options]="myOptions" />
+  <div class="filter-card-underline"></div>
 
-    <div class="white-space"></div>
-    <red-button id="Terapkan button"
-      class="red-button"
-      label="Terapkan"
-      font="14px"
-      paddingtop="10px"
-      paddingbottom="10px"
-      paddingleft="0px"
-      paddingright="0px"
-      float="right"
-      (click)="carilagi(minimum.value,maximum.value)"></red-button>
-  </form>
-  <!-- <div id="Terapkan button"
-		class="red-button"
-		(click)="carilagi(minimum.value,maximum.value)">Terapkan</div> -->
-  <!--
-	<button (click)="carilagi(minimum.value,maximum.value)"
-		class="red-button">Terapkan</button> -->
+  <input id="maximum-input"
+    [(ngModel)]="maxvalue"
+    class="textbox-search"
+    autonumeric
+    [options]="myOptions" />
+  <div class="filter-card-underline"></div>
+
+  <div class="white-space"></div>
+  <red-button id="Terapkan button"
+    class="red-button"
+    label="Terapkan"
+    font="14px"
+    paddingtop="10px"
+    paddingbottom="10px"
+    paddingleft="0px"
+    paddingright="0px"
+    float="right"
+    (click)="carilagi(minvalue,maxvalue)"></red-button>
 
 </div>
