--- a/src/app/modules/pilih-produk/components/filter-card/filter-card.component.scss
+++ b/src/app/modules/pilih-produk/components/filter-card/filter-card.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../../styles/variables/colors';
 
-#Terapkan{
- float: right;
+#Terapkan {
+	float: right;
 }
 #filter-card-container {
 	padding-top: 60px;
@@ -26,7 +26,6 @@
 
 .textbox-search-with-logo {
 	height: 40px;
-	width: 100%;
 	border: solid $putih-tok 1px;
 	border-radius: 5px;
 	color: $abu-abu-sesuatu;
@@ -56,7 +55,7 @@
 }
 .textbox-search {
 	height: 40px;
-	width: 100%;
+	width: 250px;
 	border: solid $putih-tok 1px;
 	border-radius: 5px;
 	color: $abu-abu-aspal;
