--- a/src/app/shared/components/item-desc/item-desc.component.html
+++ b/src/app/shared/components/item-desc/item-desc.component.html
@@ -1,4 +1,6 @@
-<div id="item-name">
+<div id="item-name"
+	(click)="itemClicked()"
+	style="cursor: pointer;">
 	{{item.product_name}}
 </div>
 <wsv wide="6px"></wsv>
