--- a/src/app/modules/transaction-detail/components/status-label/status-label.component.html
+++ b/src/app/modules/transaction-detail/components/status-label/status-label.component.html
@@ -1,21 +1,21 @@
 <div *ngIf="tampilkanSelesaiAbu2()"
-	class="gray-label">SELESAI</div>
+	class="gray-label">Selesai</div>
 
 <div *ngIf="tampilkanSelesaiMerah()"
 	class="red-label"
-	(click)="confirmOrder()">SELESAI</div>
+	(click)="confirmOrder()">Selesai</div>
 
 <div *ngIf="tampilkanBeliLagi()"
 	class="red-label"
-	(click)="ajukanLagi()">BELI LAGI</div>
+	(click)="ajukanLagi()">Beli Lagi</div>
 
 <div *ngIf="tampilkanAjukanLagi()"
 	class="red-label"
-	(click)="ajukanLagi()">AJUKAN LAGI</div>
+	(click)="ajukanLagi()">Ajukan Lagi</div>
 
 <div *ngIf="tampilkanCariSejenis()"
 	class="red-label"
-	(click)="cariSejenis()">CARI SEJENIS</div>
+	(click)="cariSejenis()">Cari Sejenis</div>
 
 
 <!-- 
