--- a/src/app/modules/transaction-detail/components/status-pembelian/status-pembelian.component.html
+++ b/src/app/modules/transaction-detail/components/status-pembelian/status-pembelian.component.html
@@ -16,7 +16,8 @@
 		<div class="label-1">
 			No. Tagihan
 		</div>
-		<div class="label-3">
+		<div class="label-3"
+			(click)="lihatTagihanDetail()">
 			{{item?.invoice_no}}
 		</div>
 	</div>
@@ -31,14 +32,14 @@
 				<div class="label-5">Harga Belanja</div>
 				<div class="d-flex justify-content-between width-1">
 					<div class="label-5">Rp</div>
-					<div class="label-5">{{item?.grand_total|rupiah}}</div>
+					<div class="label-5">{{item?.grand_total|rupiah:'no-rp'}}</div>
 				</div>
 			</div>
 			<div class="d-flex justify-content-between">
 				<div class="label-5">Total Ongkos Kirim</div>
 				<div class="d-flex justify-content-between width-1">
 					<div class="label-5">Rp</div>
-					<div class="label-5">{{item?.shipping_cost|rupiah}}</div>
+					<div class="label-5">{{item?.shipping_cost|rupiah:'no-rp'}}</div>
 				</div>
 			</div>
 		</div>
