--- a/src/app/modules/transaction-detail/pages/transaction-detail-layout/transaction-detail-layout.component.html
+++ b/src/app/modules/transaction-detail/pages/transaction-detail-layout/transaction-detail-layout.component.html
@@ -98,7 +98,7 @@
 				<wsv wide="20px"></wsv>
 				<div class="padding">
 					<div class="label-1">Catatan Pengiriman:</div>
-					<div class="label-2">{{item?.message}}</div>
+					<div class="label-2">{{item?.delivery_message}}</div>
 				</div>
 
 				<wsv wide="20px"></wsv>
