--- a/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval2/pages/approval-layout/approval-layout.component.html
@@ -10,8 +10,7 @@
         </div>
 
         <ng-template #elseBlock>
-            <wsv wide="5px"></wsv>
-            <div class="container">
+            <div>
                 <div id="top-fixed">
                     <div id="keranjang-label">APPROVAL</div>
                     <wsv wide="10px"></wsv>
