--- a/src/app/modules/account/components-info-perusahaan/edit-alamat-dialog/edit-alamat-dialog.component.html
+++ b/src/app/modules/account/components-info-perusahaan/edit-alamat-dialog/edit-alamat-dialog.component.html
@@ -11,7 +11,7 @@
 <div class="d-flex">
 	<div class="flex-even">
 		<div class="d-flex justify-content-end align-items-center">
-			<label-input label="Nama Alamat"></label-input>
+			<label-input label="Nama Perusahaan"></label-input>
 			<wsh wide="16px"></wsh>
 
 			<rounded-input width="298px"
@@ -31,8 +31,8 @@
 	</div>
 	<div class="flex-even">
 		<div class="d-flex justify-content-end align-items-center">
-			<label-input label="Nama Perusahaan"
-				[harusDiisi]="true"></label-input>
+			<!-- <label-input label=""
+				[harusDiisi]="true"></label-input> -->
 			<wsh wide="16px"></wsh>
 
 		</div>
