--- a/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
+++ b/src/app/modules/pilih-produk/components/filter-card/filter-card.component.html
@@ -6,6 +6,7 @@
   <input id="minimum-input"
     [(ngModel)]="minvalue"
     class="textbox-search"
+    placeholder="Harga Minimum"
     autonumeric
     [options]="myOptions" />
   <div class="filter-card-underline"></div>
@@ -13,6 +14,7 @@
   <input id="maximum-input"
     [(ngModel)]="maxvalue"
     class="textbox-search"
+    placeholder="Harga Maksimum"
     autonumeric
     [options]="myOptions" />
   <div class="filter-card-underline"></div>
