--- a/src/app/modules/account/components-kelola-purchaser/add-purchaser-editor/add-purchaser-editor.component.html
+++ b/src/app/modules/account/components-kelola-purchaser/add-purchaser-editor/add-purchaser-editor.component.html
@@ -5,6 +5,7 @@
 	<div>
 		<input type="text"
 			class="textbox-search"
+			placeholder="Nama Depan"
 			[(ngModel)]="param.first_name">
 	</div>
 </div>
@@ -20,6 +21,7 @@
 	<div>
 		<input type="text"
 			class="textbox-search"
+			placeholder="Nama Belakang"
 			[(ngModel)]="param.last_name">
 	</div>
 </div>
@@ -34,6 +36,7 @@
 	<div>
 		<input type="text"
 			class="textbox-search"
+			placeholder="Email"
 			[(ngModel)]="param.email">
 	</div>
 </div>
