--- a/src/app/modules/account/components-kelola-purchaser/add-purchaser-editor/add-purchaser-editor.component.scss
+++ b/src/app/modules/account/components-kelola-purchaser/add-purchaser-editor/add-purchaser-editor.component.scss
@@ -3,10 +3,10 @@
 
 .label-1 {
 	font-family: $primary-font;
-	font-style: normal;
 	font-weight: 600;
 	font-size: 16px;
 	width: 300px;
+	font-style: bold;
 	/* or 350% */
 
 	color: #a9a9a9;
