--- a/src/app/shared/components/address-section/address-section.component.scss
+++ b/src/app/shared/components/address-section/address-section.component.scss
@@ -1,10 +1,8 @@
 @import '../../../../styles/variables/colors';
 @import '../../../../styles/variables/fonts';
 
-
-
 #location-user {
-	width: 50%;
+	width: 586px;
 	margin: auto;
 	color: white;
 	height: 50px;
@@ -16,7 +14,6 @@
 	background-size: 16px 25px;
 	cursor: pointer;
 }
-
 
 #location-user-panjang {
 	width: 50%;
