--- a/src/app/layout/components/login-card2/login-card2.component.html
+++ b/src/app/layout/components/login-card2/login-card2.component.html
@@ -11,7 +11,7 @@
                         <img src="../../../../assets/image/icons/login.svg">
                     </div>
                     <wsv wide="10px"></wsv>
-                    <div class="d-flex justify-content-center teksbesar">Log In</div>
+                    <div class="d-flex justify-content-center teksbesar">Log Ins</div>
                     <wsv wide="15px"></wsv>
                     <div class="d-flex justify-content-center ">Kami akan mengirimkan OTP ke alamat email anda</div>
                     <wsv wide="20px"></wsv>
